--- a/book/dev_process.html
+++ b/book/dev_process.html
@@ -75,7 +75,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="overview.html"><strong aria-hidden="true">1.</strong> Overview</a></li><li class="chapter-item expanded "><a href="roadmap.html"><strong aria-hidden="true">2.</strong> Roadmap</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">3.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="server.html"><strong aria-hidden="true">4.</strong> Server Architecture</a></li><li class="chapter-item expanded "><a href="engine.html"><strong aria-hidden="true">5.</strong> Engine Architecture</a></li><li class="chapter-item expanded "><a href="learn.html"><strong aria-hidden="true">6.</strong> Learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/world.html"><strong aria-hidden="true">6.1.</strong> World</a></li><li class="chapter-item expanded "><a href="learn/ec.html"><strong aria-hidden="true">6.2.</strong> Entities and Components</a></li><li class="chapter-item expanded "><a href="learn/systems.html"><strong aria-hidden="true">6.3.</strong> Systems</a></li><li class="chapter-item expanded "><a href="learn/game.html"><strong aria-hidden="true">6.4.</strong> Game</a></li><li class="chapter-item expanded "><a href="learn/server.html"><strong aria-hidden="true">6.5.</strong> Server</a></li><li class="chapter-item expanded "><a href="learn/client.html"><strong aria-hidden="true">6.6.</strong> Client</a></li></ol></li><li class="chapter-item expanded "><a href="origin.html"><strong aria-hidden="true">7.</strong> Origin</a></li><li class="chapter-item expanded "><a href="dev_process.html" class="active"><strong aria-hidden="true">8.</strong> Development Process</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="overview.html"><strong aria-hidden="true">1.</strong> Overview</a></li><li class="chapter-item expanded "><a href="roadmap.html"><strong aria-hidden="true">2.</strong> Roadmap</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">3.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="server.html"><strong aria-hidden="true">4.</strong> Server Architecture</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="server/connection.html"><strong aria-hidden="true">4.1.</strong> Connection Listener</a></li><li class="chapter-item expanded "><a href="server/pool.html"><strong aria-hidden="true">4.2.</strong> Pool</a></li><li class="chapter-item expanded "><a href="server/connector.html"><strong aria-hidden="true">4.3.</strong> Connector</a></li><li class="chapter-item expanded "><a href="server/controller.html"><strong aria-hidden="true">4.4.</strong> Controller</a></li><li class="chapter-item expanded "><a href="server/application.html"><strong aria-hidden="true">4.5.</strong> Application</a></li></ol></li><li class="chapter-item expanded "><a href="engine.html"><strong aria-hidden="true">5.</strong> Engine Architecture</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="engine/application.html"><strong aria-hidden="true">5.1.</strong> Application</a></li></ol></li><li class="chapter-item expanded "><a href="learn.html"><strong aria-hidden="true">6.</strong> Learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/world.html"><strong aria-hidden="true">6.1.</strong> World</a></li><li class="chapter-item expanded "><a href="learn/ec.html"><strong aria-hidden="true">6.2.</strong> Entities and Components</a></li><li class="chapter-item expanded "><a href="learn/systems.html"><strong aria-hidden="true">6.3.</strong> Systems</a></li><li class="chapter-item expanded "><a href="learn/game.html"><strong aria-hidden="true">6.4.</strong> Game</a></li><li class="chapter-item expanded "><a href="learn/server.html"><strong aria-hidden="true">6.5.</strong> Server</a></li><li class="chapter-item expanded "><a href="learn/client.html"><strong aria-hidden="true">6.6.</strong> Client</a></li></ol></li><li class="chapter-item expanded "><a href="origin.html"><strong aria-hidden="true">7.</strong> Origin</a></li><li class="chapter-item expanded "><a href="dev_process.html" class="active"><strong aria-hidden="true">8.</strong> Development Process</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -135,16 +135,58 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="development-process"><a class="header" href="#development-process">Development Process</a></h1>
-<p>As we were developing Alien Slayer, I thought about how to turn the game into a multiplayer event (it isn't part of the development plan, I was just curious). After some researching, I decided to make my own TCP multiplayer server using Rust. I called this project Blizzard. It consists of two parts: Blizzard Server and Blizzard Game Engine.</p>
-<p>I first started to make the server. It handles client connections, data sending and player input, as well as running the games. After some successful connections and data sending, I realized the server needed some sort of game engine to run the game in a separate thread. I decided to make my own game engine, also with Rust. Hence Blizzard Game Engine came to be, made with ECS architecture. It is only a &quot;data-only&quot; engine, but in the future I hope to give it features like windowing, multi-platform, and rendering.</p>
-<p>After I was able to make a basic game, I decided to abstract the entire server and engine for others to use it! I ended up with this amazing library (it actually consists of 4 different crates).</p>
-<p>Here are some things I had to learn and implement:</p>
+<h2 id="overview"><a class="header" href="#overview">Overview</a></h2>
+<p>When starting this project, I really had no idea of what I was doing. I did a lot of researching, reading, book finding, and video watching. I needed to learn the following:</p>
+<ul>
+<li>Networking
+<ul>
+<li>TCP &amp; UDP networking</li>
+<li>Data serialization</li>
+</ul>
+</li>
+<li>Rust
 <ul>
 <li>Threads</li>
-<li>Networking (TCP, UDP, Serialization)</li>
-<li>ECS architecture</li>
-<li>Abstraction: Generics, traits, trait objects, macros</li>
-<li>Safe data: Atomic Reference Counters, Mutual Exclusion, Thread Messages</li>
+<li>Safe types (Arc, Mutex)</li>
+<li>Generics</li>
+<li>Traits</li>
+<li>Type traits</li>
+<li>Macros (Procedural and Derivative)</li>
+<li>Closures</li>
+<li>Iterators</li>
+<li>Packages and crates</li>
+<li>Pretty much everything from <code>The-Book</code> except lifetimes</li>
+</ul>
+</li>
+<li>Game engine architectures</li>
+<li>Game server architectures</li>
+</ul>
+<h2 id="recap"><a class="header" href="#recap">Recap</a></h2>
+<p>I first developed the TCP server. After good data passing between threads and handling connections, I realized I needed a sort of game engine running with my server, so it could be authorative. I ended up also making a small game engine.</p>
+<h2 id="resources"><a class="header" href="#resources">Resources</a></h2>
+<p>Here are some resources I strongly recommend (they aren't even half of what I read and watched):</p>
+<ul>
+<li>Rust
+<ul>
+<li><a href="https://doc.rust-lang.org/stable/book/title-page.html">&quot;The Book&quot;</a></li>
+</ul>
+</li>
+<li>Networking &amp; Serialization
+<ul>
+<li>Book: &quot;Network Programming with Rust&quot; - Abhishek Chanda</li>
+</ul>
+</li>
+<li>ECS
+<ul>
+<li>Paper: &quot;ECS Game Engine Design&quot; - Daniel Hall</li>
+</ul>
+</li>
+<li>Game Engine YouTube series
+<ul>
+<li><a href="https://www.youtube.com/watch?v=JxIZbV_XjAs&amp;list=PLlrATfBNZ98dC-V-N3m0Go4deliWHPFwT">Hazel</a></li>
+<li><a href="https://www.youtube.com/watch?v=dHPuU-DJoBM&amp;list=PLv8Ddw9K0JPg1BEO-RS-0MYs423cvLVtj">Kohi</a></li>
+</ul>
+</li>
 </ul>
 
                     </main>
