--- a/book/engine.html
+++ b/book/engine.html
@@ -75,7 +75,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="overview.html"><strong aria-hidden="true">1.</strong> Overview</a></li><li class="chapter-item expanded "><a href="roadmap.html"><strong aria-hidden="true">2.</strong> Roadmap</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">3.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="server.html"><strong aria-hidden="true">4.</strong> Server Architecture</a></li><li class="chapter-item expanded "><a href="engine.html" class="active"><strong aria-hidden="true">5.</strong> Engine Architecture</a></li><li class="chapter-item expanded "><a href="learn.html"><strong aria-hidden="true">6.</strong> Learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/world.html"><strong aria-hidden="true">6.1.</strong> World</a></li><li class="chapter-item expanded "><a href="learn/ec.html"><strong aria-hidden="true">6.2.</strong> Entities and Components</a></li><li class="chapter-item expanded "><a href="learn/systems.html"><strong aria-hidden="true">6.3.</strong> Systems</a></li><li class="chapter-item expanded "><a href="learn/game.html"><strong aria-hidden="true">6.4.</strong> Game</a></li><li class="chapter-item expanded "><a href="learn/server.html"><strong aria-hidden="true">6.5.</strong> Server</a></li><li class="chapter-item expanded "><a href="learn/client.html"><strong aria-hidden="true">6.6.</strong> Client</a></li></ol></li><li class="chapter-item expanded "><a href="origin.html"><strong aria-hidden="true">7.</strong> Origin</a></li><li class="chapter-item expanded "><a href="dev_process.html"><strong aria-hidden="true">8.</strong> Development Process</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="overview.html"><strong aria-hidden="true">1.</strong> Overview</a></li><li class="chapter-item expanded "><a href="roadmap.html"><strong aria-hidden="true">2.</strong> Roadmap</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">3.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="server.html"><strong aria-hidden="true">4.</strong> Server Architecture</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="server/connection.html"><strong aria-hidden="true">4.1.</strong> Connection Listener</a></li><li class="chapter-item expanded "><a href="server/pool.html"><strong aria-hidden="true">4.2.</strong> Pool</a></li><li class="chapter-item expanded "><a href="server/connector.html"><strong aria-hidden="true">4.3.</strong> Connector</a></li><li class="chapter-item expanded "><a href="server/controller.html"><strong aria-hidden="true">4.4.</strong> Controller</a></li><li class="chapter-item expanded "><a href="server/application.html"><strong aria-hidden="true">4.5.</strong> Application</a></li></ol></li><li class="chapter-item expanded "><a href="engine.html" class="active"><strong aria-hidden="true">5.</strong> Engine Architecture</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="engine/application.html"><strong aria-hidden="true">5.1.</strong> Application</a></li></ol></li><li class="chapter-item expanded "><a href="learn.html"><strong aria-hidden="true">6.</strong> Learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/world.html"><strong aria-hidden="true">6.1.</strong> World</a></li><li class="chapter-item expanded "><a href="learn/ec.html"><strong aria-hidden="true">6.2.</strong> Entities and Components</a></li><li class="chapter-item expanded "><a href="learn/systems.html"><strong aria-hidden="true">6.3.</strong> Systems</a></li><li class="chapter-item expanded "><a href="learn/game.html"><strong aria-hidden="true">6.4.</strong> Game</a></li><li class="chapter-item expanded "><a href="learn/server.html"><strong aria-hidden="true">6.5.</strong> Server</a></li><li class="chapter-item expanded "><a href="learn/client.html"><strong aria-hidden="true">6.6.</strong> Client</a></li></ol></li><li class="chapter-item expanded "><a href="origin.html"><strong aria-hidden="true">7.</strong> Origin</a></li><li class="chapter-item expanded "><a href="dev_process.html"><strong aria-hidden="true">8.</strong> Development Process</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -135,17 +135,74 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="engine-architecture"><a class="header" href="#engine-architecture">Engine Architecture</a></h1>
-<p>ECS Game Engine.</p>
-<p>This page is not yet finished...</p>
+<p>The engine is meant to be used with ECS architecture (Entity Component System). A game engine consists of many parts, which are not yet implemented. As of now, there is only:</p>
+<ul>
+<li>Core
+<ul>
+<li>Logger</li>
+<li>Parsing</li>
+</ul>
+</li>
+<li>Application Layer
+<ul>
+<li>Event loop</li>
+<li>Network Input</li>
+<li>ECS</li>
+</ul>
+</li>
+</ul>
+<p>This is because the MVP was meant for integration with the server. This is the minimum needed for integration.</p>
+<p>The future architecture will consist of more parts:</p>
+<ul>
+<li>Platform layer
+<ul>
+<li>Multi-platform support</li>
+<li>File I/O</li>
+</ul>
+</li>
+<li>Core
+<ul>
+<li>Engine configuration</li>
+<li>Tests</li>
+<li>Math library</li>
+<li>System time</li>
+</ul>
+</li>
+<li>Renderer
+<ul>
+<li>OpenGL abstraction</li>
+<li>GUI</li>
+<li>Camera</li>
+<li>Sceneing</li>
+<li>Many other rendering goodies</li>
+</ul>
+</li>
+<li>Application Layer
+<ul>
+<li>Physics</li>
+<li>State machine</li>
+<li>Time</li>
+<li>Lifecycles</li>
+<li>Shutdown</li>
+</ul>
+</li>
+<li>AI layer</li>
+<li>Tools
+<ul>
+<li>Debugging</li>
+<li>Build system</li>
+</ul>
+</li>
+</ul>
 
                     </main>
 
                     <nav class="nav-wrapper" aria-label="Page navigation">
                         <!-- Mobile navigation buttons -->
-                            <a rel="prev" href="server.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                            <a rel="prev" href="server/application.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
-                            <a rel="next" href="learn.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="engine/application.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         <div style="clear: both"></div>
@@ -154,10 +211,10 @@
             </div>
 
             <nav class="nav-wide-wrapper" aria-label="Page navigation">
-                    <a rel="prev" href="server.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
+                    <a rel="prev" href="server/application.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
-                    <a rel="next" href="learn.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="engine/application.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
