--- a/book/server.html
+++ b/book/server.html
@@ -75,7 +75,7 @@
 
         <nav id="sidebar" class="sidebar" aria-label="Table of contents">
             <div class="sidebar-scrollbox">
-                <ol class="chapter"><li class="chapter-item expanded "><a href="overview.html"><strong aria-hidden="true">1.</strong> Overview</a></li><li class="chapter-item expanded "><a href="roadmap.html"><strong aria-hidden="true">2.</strong> Roadmap</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">3.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="server.html" class="active"><strong aria-hidden="true">4.</strong> Server Architecture</a></li><li class="chapter-item expanded "><a href="engine.html"><strong aria-hidden="true">5.</strong> Engine Architecture</a></li><li class="chapter-item expanded "><a href="learn.html"><strong aria-hidden="true">6.</strong> Learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/world.html"><strong aria-hidden="true">6.1.</strong> World</a></li><li class="chapter-item expanded "><a href="learn/ec.html"><strong aria-hidden="true">6.2.</strong> Entities and Components</a></li><li class="chapter-item expanded "><a href="learn/systems.html"><strong aria-hidden="true">6.3.</strong> Systems</a></li><li class="chapter-item expanded "><a href="learn/game.html"><strong aria-hidden="true">6.4.</strong> Game</a></li><li class="chapter-item expanded "><a href="learn/server.html"><strong aria-hidden="true">6.5.</strong> Server</a></li><li class="chapter-item expanded "><a href="learn/client.html"><strong aria-hidden="true">6.6.</strong> Client</a></li></ol></li><li class="chapter-item expanded "><a href="origin.html"><strong aria-hidden="true">7.</strong> Origin</a></li><li class="chapter-item expanded "><a href="dev_process.html"><strong aria-hidden="true">8.</strong> Development Process</a></li></ol>
+                <ol class="chapter"><li class="chapter-item expanded "><a href="overview.html"><strong aria-hidden="true">1.</strong> Overview</a></li><li class="chapter-item expanded "><a href="roadmap.html"><strong aria-hidden="true">2.</strong> Roadmap</a></li><li class="chapter-item expanded "><a href="getting_started.html"><strong aria-hidden="true">3.</strong> Getting started</a></li><li class="chapter-item expanded "><a href="server.html" class="active"><strong aria-hidden="true">4.</strong> Server Architecture</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="server/connection.html"><strong aria-hidden="true">4.1.</strong> Connection Listener</a></li><li class="chapter-item expanded "><a href="server/pool.html"><strong aria-hidden="true">4.2.</strong> Pool</a></li><li class="chapter-item expanded "><a href="server/connector.html"><strong aria-hidden="true">4.3.</strong> Connector</a></li><li class="chapter-item expanded "><a href="server/controller.html"><strong aria-hidden="true">4.4.</strong> Controller</a></li><li class="chapter-item expanded "><a href="server/application.html"><strong aria-hidden="true">4.5.</strong> Application</a></li></ol></li><li class="chapter-item expanded "><a href="engine.html"><strong aria-hidden="true">5.</strong> Engine Architecture</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="engine/application.html"><strong aria-hidden="true">5.1.</strong> Application</a></li></ol></li><li class="chapter-item expanded "><a href="learn.html"><strong aria-hidden="true">6.</strong> Learn</a></li><li><ol class="section"><li class="chapter-item expanded "><a href="learn/world.html"><strong aria-hidden="true">6.1.</strong> World</a></li><li class="chapter-item expanded "><a href="learn/ec.html"><strong aria-hidden="true">6.2.</strong> Entities and Components</a></li><li class="chapter-item expanded "><a href="learn/systems.html"><strong aria-hidden="true">6.3.</strong> Systems</a></li><li class="chapter-item expanded "><a href="learn/game.html"><strong aria-hidden="true">6.4.</strong> Game</a></li><li class="chapter-item expanded "><a href="learn/server.html"><strong aria-hidden="true">6.5.</strong> Server</a></li><li class="chapter-item expanded "><a href="learn/client.html"><strong aria-hidden="true">6.6.</strong> Client</a></li></ol></li><li class="chapter-item expanded "><a href="origin.html"><strong aria-hidden="true">7.</strong> Origin</a></li><li class="chapter-item expanded "><a href="dev_process.html"><strong aria-hidden="true">8.</strong> Development Process</a></li></ol>
             </div>
             <div id="sidebar-resize-handle" class="sidebar-resize-handle"></div>
         </nav>
@@ -135,8 +135,29 @@
                 <div id="content" class="content">
                     <main>
                         <h1 id="server-architecture"><a class="header" href="#server-architecture">Server Architecture</a></h1>
-<p>Authorative client-server.</p>
-<p>This page is not yet finished...</p>
+<p>The architecture decided for any game using this,is for the server to be an authorative. This means that the server receives user data, and decides how to update the game according to the inputs. After the update, it dispatches the updated game data to all players.</p>
+<div align="center">
+  <img src="./assets/client-server.svg" alt="Client-Server Architecture"/>
+</div>
+<p align="center" style="text-align: center">
+    Client-Server Diagram
+</p>
+<br/>
+<p>The server is missing many features like cheating prevention, player prediction, a better game loop, and metrics.</p>
+<p>The server is made up of many parts:</p>
+<ul>
+<li>Connection listener (handles initial connections)</li>
+<li>Pool (Reference to connectors)</li>
+<li>Connector (Bridge between controller and pool)</li>
+<li>Controller (Handles application, player connections, message passing)</li>
+<li>Application (Runs the game, listens for controller messages)</li>
+</ul>
+<div align="center">
+    <img src="./assets/server.svg" alt="Server Architecture"/>
+</div>
+<p align="center" style="text-align: center">
+    Server Architecture Diagram
+</p>
 
                     </main>
 
@@ -145,7 +166,7 @@
                             <a rel="prev" href="getting_started.html" class="mobile-nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                                 <i class="fa fa-angle-left"></i>
                             </a>
-                            <a rel="next" href="engine.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                            <a rel="next" href="server/connection.html" class="mobile-nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                                 <i class="fa fa-angle-right"></i>
                             </a>
                         <div style="clear: both"></div>
@@ -157,7 +178,7 @@
                     <a rel="prev" href="getting_started.html" class="nav-chapters previous" title="Previous chapter" aria-label="Previous chapter" aria-keyshortcuts="Left">
                         <i class="fa fa-angle-left"></i>
                     </a>
-                    <a rel="next" href="engine.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
+                    <a rel="next" href="server/connection.html" class="nav-chapters next" title="Next chapter" aria-label="Next chapter" aria-keyshortcuts="Right">
                         <i class="fa fa-angle-right"></i>
                     </a>
             </nav>
